Ajeitando as Ancoras

--- a/Site/assets/css/style.css
+++ b/Site/assets/css/style.css
@@ -152,7 +152,7 @@ h6 {
 #intro .intro-text {
   position: relative;
   left: 0;
-  top: 60px;
+  top: 200px;
   right: 0;
   height: calc(50% - 60px);
   display: flex;
@@ -170,6 +170,7 @@ h6 {
   font-weight: 400;
   line-height: 56px;
   color: #fff;
+  text-shadow: 0.1em 0.1em 0.2em black;
 }
 
 @media (max-width: 768px) {
@@ -184,6 +185,7 @@ h6 {
   margin-bottom: 20px;
   padding: 0 15px;
   font-size: 24px;
+  text-shadow: 0.1em 0.1em 0.2em black;
 }
 
 @media (max-width: 768px) {
@@ -670,44 +672,44 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 /* Product Featuress Section
 --------------------------------*/
-#features {
+#endereco {
   background: #fff;
   padding: 60px 0 0 0;
   overflow: hidden;
 }
 
-#features .features-img {
+#endereco .features-img {
   text-align: center;
   padding-top: 20px;
 }
 
 @media (min-width: 769px) {
-  #features .features-img {
+  #endereco .features-img {
     padding-top: 120px;
     margin-top: -200px;
   }
 }
 
-#features .features-img img {
+#endereco .features-img img {
   max-width: 100%;
 }
 
-#features .box {
+#endereco .box {
   margin-bottom: 15px;
   text-align: center;
 }
 
-#features .icon {
+#endereco .icon {
   margin-bottom: 10px;
 }
 
-#features .icon i {
+#endereco .icon i {
   color: #666666;
   font-size: 40px;
   transition: 0.5s;
 }
 
-#features .icon i:before {
+#endereco .icon i:before {
   background: #1dc8cd;
   background: linear-gradient(45deg, #1dc8cd 0%, #55fabe 100%);
   background-clip: border-box;
@@ -715,43 +717,43 @@ body.mobile-nav-active #mobile-nav-toggle {
   -webkit-text-fill-color: transparent;
 }
 
-#features .title {
+#endereco .title {
   font-weight: 300;
   margin-bottom: 15px;
   font-size: 22px;
 }
 
-#features .title a {
+#endereco .title a {
   color: #111;
 }
 
-#features .description {
+#endereco .description {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 10px;
 }
 
-#features .section-description {
+#endereco .section-description {
   padding-bottom: 10px;
 }
 
 /* Product Advanced Featuress Section
 --------------------------------*/
-#advanced-features {
+#campi {
   overflow: hidden;
 }
 
-#advanced-features .features-row {
+#campi .features-row {
   padding: 60px 0 30px 0;
 }
 
-#advanced-features h2 {
+#campi h2 {
   font-size: 26px;
   font-weight: 700;
   color: #000;
 }
 
-#advanced-features h3 {
+#campi h3 {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -759,13 +761,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #999;
 }
 
-#advanced-features p {
+#campi p {
   line-height: 24px;
   color: #777;
   margin-bottom: 30px;
 }
 
-#advanced-features i {
+#campi i {
   color: #666666;
   font-size: 64px;
   transition: 0.5s;
@@ -774,7 +776,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   line-height: 1;
 }
 
-#advanced-features i:before {
+#campi i:before {
   background: #1dc8cd;
   background: linear-gradient(45deg, #1dc8cd 0%, #55fabe 100%);
   background-clip: border-box;
@@ -782,28 +784,28 @@ body.mobile-nav-active #mobile-nav-toggle {
   -webkit-text-fill-color: transparent;
 }
 
-#advanced-features .advanced-feature-img-right {
+#campi .advanced-feature-img-right {
   max-width: 100%;
   float: right;
   padding: 0 0 30px 30px;
 }
 
-#advanced-features .advanced-feature-img-left {
+#campi .advanced-feature-img-left {
   max-width: 100%;
   float: left;
   padding: 0 30px 30px 0;
 }
 
 @media (max-width: 768px) {
-  #advanced-features .advanced-feature-img-right,
-  #advanced-features .advanced-feature-img-left {
+  #campi .advanced-feature-img-right,
+  #campi .advanced-feature-img-left {
     max-width: 50%;
   }
 }
 
 @media (max-width: 767px) {
-  #advanced-features .advanced-feature-img-right,
-  #advanced-features .advanced-feature-img-left {
+  #campi .advanced-feature-img-right,
+  #campi .advanced-feature-img-left {
     max-width: 100%;
     float: none;
     padding: 0 0 30px 0;
